# whatsapp-webhook-sendpulse

./: .env  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  run.py  tests.py
app/: __init__.py  models.py  routes.py
scripts/: verificar_bot.py
services/: external_api.py
